tree-sitter-ghc-core/test/corpus/basic.txt
================================
Banner and result size
================================

==================== Tidy Core ====================

Result size of Tidy Core = {terms: 1, types: 0, coercions: 0, joins: 0/0}

--------------------------------

(source_file
  (banner)
  (result_size))

================================
Literal and application bindings
================================

x = "main"#

y = TrNameS x

--------------------------------

(source_file
  (binding name: (variable) rhs: (literal))
  (binding
    name: (variable)
    rhs: (application
      (constructor)
      (variable))))

================================
Consecutive signed bindings, type-shaped rhs (signature must not over-munch)
================================

greeting :: String
greeting = unpackCString# greeting1

$trModule3 :: TrName
$trModule3 = TrNameS $trModule4

--------------------------------

(source_file
  (binding
    signature: (type_signature (variable) (constructor))
    name: (variable)
    rhs: (application (variable) (variable)))
  (binding
    signature: (type_signature (variable) (constructor))
    name: (variable)
    rhs: (application (constructor) (variable))))

================================
Lambda with case and constructor pattern
================================

f = \ x -> case x of { I# y -> y }

--------------------------------

(source_file
  (binding
    name: (variable)
    rhs: (lambda
      (variable)
      (case
        scrutinee: (variable)
        (alternative
          pattern: (pattern
            (con_pattern
              (constructor)
              (variable)))
          rhs: (variable))))))

================================
Case binder and default alternative
================================

g = case w of v { __DEFAULT -> v; 0# -> w }

--------------------------------

(source_file
  (binding
    name: (variable)
    rhs: (case
      scrutinee: (variable)
      binder: (variable)
      (alternative
        pattern: (pattern)
        rhs: (variable))
      (alternative
        pattern: (pattern
          (literal))
        rhs: (variable)))))

================================
Let with primop application
================================

h = let { z = +# a 1# } in z

--------------------------------

(source_file
  (binding
    name: (variable)
    rhs: (let
      (binding
        name: (variable)
        rhs: (application
          (operator)
          (variable)
          (literal)))
      body: (variable))))

================================
Recursive group and jump
================================

Rec {
go = \ n -> jump go n
end Rec }

--------------------------------

(source_file
  (rec_block
    (binding
      name: (variable)
      rhs: (lambda
        (variable)
        (jump
          (variable)
          (variable))))))

================================
Binding with function-type signature
================================

f :: GHC.Types.Int -> Int
f = \ x -> x

--------------------------------

(source_file
  (binding
    signature: (type_signature
      (variable)
      (function_type
        (constructor)
        (constructor)))
    name: (variable)
    rhs: (lambda
      (variable)
      (variable))))

================================
Typed binder and type application
================================

k = \ (x :: Int) -> f @Int x

--------------------------------

(source_file
  (binding
    name: (variable)
    rhs: (lambda
      (typed_binder
        (variable)
        (constructor))
      (application
        (variable)
        (type_arg
          (constructor))
        (variable)))))

================================
Forall signature and tuple
================================

p :: forall a. (a, a)
p = (x, y)

--------------------------------

(source_file
  (binding
    signature: (type_signature
      (variable)
      (forall_type
        (tyvar
          (variable))
        (type_paren_form
          (tyvar
            (variable))
          (tyvar
            (variable)))))
    name: (variable)
    rhs: (tuple
      (variable)
      (variable))))

================================
Binding with IdInfo bracket
================================

f :: Int
[GblId, Arity=1, Str=<S>]
f = x

--------------------------------

(source_file
  (binding
    signature: (type_signature
      (variable)
      (constructor))
    info: (idinfo)
    name: (variable)
    rhs: (variable)))

================================
Annotated typed binder
================================

g = \ (x [Occ=Once1!] :: Int) -> x

--------------------------------

(source_file
  (binding
    name: (variable)
    rhs: (lambda
      (typed_binder
        (variable)
        (binder_annotation)
        (constructor))
      (variable))))

================================
Signature name annotation
================================

h [Occ=LoopBreaker] :: Int
h = h

--------------------------------

(source_file
  (binding
    signature: (type_signature
      (variable)
      (binder_annotation)
      (constructor))
    name: (variable)
    rhs: (variable)))

================================
Cast with coercion
================================

f = x `cast` (Sym d :: a ~R# b)

--------------------------------

(source_file
  (binding
    name: (variable)
    rhs: (cast
      (variable)
      (coercion))))

================================
Coercion argument
================================

g = h @~(co :: a ~# b)

--------------------------------

(source_file
  (binding
    name: (variable)
    rhs: (application
      (variable)
      (coercion_arg
        (coercion)))))

================================
Tuple pattern and source tick
================================

k = case x of { (a, b) -> src<F:1:2> a }

--------------------------------

(source_file
  (binding
    name: (variable)
    rhs: (case
      scrutinee: (variable)
      (alternative
        pattern: (pattern
          (tuple_pattern
            (variable)
            (variable)))
        rhs: (tick_expr
          (tickish)
          (variable))))))

================================
Stacked -g3 source notes with a multi-line paren span
================================

area = \ w h -> src<Ticks.hs:(7,1)-(9,24)> src<Ticks.hs:7:16> w

--------------------------------

(source_file
  (binding
    name: (variable)
    rhs: (lambda
      (variable)
      (variable)
      (tick_expr
        (tickish)
        (tick_expr
          (tickish)
          (variable))))))

================================
Operator-labelled cost-centre tick (payload contains '>')
================================

f = tick<<?>> \ x -> scc<<?>> (g x)

--------------------------------

(source_file
  (binding
    name: (variable)
    rhs: (tick_expr
      (tickish)
      (lambda
        (variable)
        (tick_expr
          (tickish)
          (parens
            (application
              (variable)
              (variable))))))))

================================
Operator-named binding
================================

==================== Tidy Core ====================
Result size of Tidy Core
  = {terms: 1, types: 0, coercions: 0, joins: 0/0}

(+++) :: forall {a}. [a] -> [a] -> [a]
[GblId]
(+++) = ++

--------------------------------

(source_file
  (banner)
  (result_size)
  (binding
    signature: (type_signature
      (paren_operator
        (operator))
      (forall_type
        (inferred_tyvar
          (tyvar
            (variable)))
        (function_type
          (type_list
            (tyvar
              (variable)))
          (function_type
            (type_list
              (tyvar
                (variable)))
            (type_list
              (tyvar
                (variable)))))))
    info: (idinfo)
    name: (paren_operator
      (operator))
    rhs: (operator)))

================================
Multiple pass sections, unicode glyphs, simplifier stats
================================

==================== Float out(FOS {Lam = Just 0}) ====================
Result size of Float out
  = {terms: 2, types: 1, coercions: 0, joins: 0/0}

f ∷ Int → Int
f = λ (x ∷ Int) → x

==================== Simplifier iteration=1 ====================
  Total ticks: 5
Result size of Simplifier iteration=1
  = {terms: 1, types: 0, coercions: 0, joins: 0/0}

g = f

--------------------------------

(source_file
  (banner)
  (result_size)
  (binding
    signature: (type_signature
      (variable)
      (function_type
        (constructor)
        (constructor)))
    name: (variable)
    rhs: (lambda
      (typed_binder
        (variable)
        (constructor))
      (variable)))
  (banner)
  (simplifier_stats)
  (result_size)
  (binding
    name: (variable)
    rhs: (variable)))

================================
Case printed as let-bang (-dppr-case-as-let)
================================

==================== Tidy Core ====================
Result size of Tidy Core = {terms: 1, types: 0, coercions: 0, joins: 0/0}

f = let! { GHC.Types.I# x1_a1bf ~ <- x_aLS } in x1_a1bf

--------------------------------

(source_file
  (banner)
  (result_size)
  (binding
    name: (variable)
    rhs: (case_as_let
      pattern: (pattern
        (con_pattern
          (constructor)
          (variable)))
      scrutinee: (variable)
      body: (variable))))

================================
Debug decorations (-dppr-debug): tags, ascription, id-annotation
================================

==================== Tidy Core ====================
Result size of Tidy Core = {terms: 1, types: 0, coercions: 0, joins: 0/0}

f{v r1} :: GHC.Types.Int{tc 3u}
f{v r1} = (g{v r2} Just GHC.Types.Many{(w) d 65I} [gid] :: GHC.Types.Int{tc 3u})

--------------------------------

(source_file
  (banner)
  (result_size)
  (binding
    signature: (type_signature
      (variable)
      (constructor))
    name: (variable)
    rhs: (parens
      (application
        (variable)
        (constructor)
        (constructor)
        (id_annotation))
      (constructor))))

================================
Multi-line string literal (GHC string-gap continuation)
================================

lvl1
  = "Context.hs|HsModule {hsmodName,\n\
    \hsmodDecls}"#

--------------------------------

(source_file
  (binding
    name: (variable)
    rhs: (literal)))

================================
Typed unboxed literals and char escapes
================================

f = case x of { 0#Word64 -> 'a'; 1#Int64 -> '\NUL'# }

--------------------------------

(source_file
  (binding
    name: (variable)
    rhs: (case
      scrutinee: (variable)
      (alternative
        pattern: (pattern (literal))
        rhs: (literal))
      (alternative
        pattern: (pattern (literal))
        rhs: (literal)))))

================================
Colon-led and unboxed-sum constructor patterns
================================

f =
  case x of {
    :| a b -> a;
    (# _| #) c -> c
  }

--------------------------------

(source_file
  (binding
    name: (variable)
    rhs: (case
      scrutinee: (variable)
      (alternative
        pattern: (pattern
          (con_pattern
            (con_operator)
            (variable)
            (variable)))
        rhs: (variable))
      (alternative
        pattern: (pattern
          (con_pattern
            (special_con)
            (variable)))
        rhs: (variable)))))

================================
Operator-named binders (mangled bare, @-led, colon-tail)
================================

lvl = PushCallStack @?6 @?2 d

(>::) = f x

h = g (=~) >*<1

--------------------------------

(source_file
  (binding
    name: (variable)
    rhs: (application
      (constructor)
      (operator_name)
      (operator_name)
      (variable)))
  (binding
    name: (paren_operator
      (operator))
    rhs: (application
      (variable)
      (variable)))
  (binding
    name: (variable)
    rhs: (application
      (variable)
      (parens
        (operator))
      (operator_name))))

================================
Foreign call expression
================================

f =
  case {__ffi_static_ccall_unsafe ghc-internal:rts_getThreadId :: State# RealWorld -> (# State# RealWorld, Word64# #)} realWorld# of {
    __DEFAULT -> r
  }

--------------------------------

(source_file
  (binding
    name: (variable)
    rhs: (case
      scrutinee: (application
        (foreign_call
          target: (variable)
          type: (function_type
            (type_apply
              (constructor)
              (constructor))
            (unboxed_type
              (type_apply
                (constructor)
                (constructor))
              (constructor))))
        (variable))
      (alternative
        pattern: (pattern)
        rhs: (variable)))))

================================
Simplified expression section (bare expression body)
================================

==================== Simplified expression ====================

quoteExp __i (mkNameG_tc x)

--------------------------------

(source_file
  (banner)
  (expr_statement
    (variable)
    (variable)
    (parens
      (application
        (variable)
        (variable)))))

================================
Trailing rules section stays soup
================================

==================== Tidy Core rules ====================
"USPEC f @Int"
    forall (@e) ($dEq :: Eq e). f @e = \1 ww

--------------------------------

(source_file
  (trailing_sections
    (banner)))

================================
-dppr-debug pattern binder with trailing IdInfo
================================

Result size of Tidy Core = {terms: 1, types: 0, coercions: 0, joins: 0/0}

foo = case ds of wild { Box (x :: Int Unf=OtherCon []) -> x }

--------------------------------

(source_file
  (result_size)
  (binding
    name: (variable)
    rhs: (case
      scrutinee: (variable)
      binder: (variable)
      (alternative
        pattern: (pattern
          (con_pattern
            (constructor)
            (typed_binder
              (variable)
              (constructor))))
        rhs: (variable)))))

================================
Multi-line string literal with a string gap
================================

foo = "line one\n\
      \\"quoted\" done"

--------------------------------

(source_file
  (binding
    name: (variable)
    rhs: (literal)))

================================
Foreign call with C symbol name
================================

foo = {__ffi_static_ccall_safe base:c_sym "c_sym" :: Int}

--------------------------------

(source_file
  (binding
    name: (variable)
    rhs: (foreign_call
      target: (variable)
      type: (constructor))))

================================
Let-bound type prints a @-binder above its equation (worker/wrapper -O)
================================

foo
  = let {
      @a
      a = TYPE: b } in
    x

--------------------------------

(source_file
  (binding
    name: (variable)
    rhs: (let
      (binding
        signature: (type_binder
          (tyvar
            (variable)))
        name: (variable)
        rhs: (application
          (constructor)
          (special_con)
          (variable)))
      body: (variable))))

================================
Signature type keeps a trailing atom, not the binding name
================================

table :: Map.Map Int String
table = tab

poly :: Maybe a
poly = p

--------------------------------

(source_file
  (binding
    signature: (type_signature
      (variable)
      (type_apply
        (type_apply
          (constructor)
          (constructor))
        (constructor)))
    name: (variable)
    rhs: (variable))
  (binding
    signature: (type_signature
      (variable)
      (type_apply
        (constructor)
        (tyvar
          (variable))))
    name: (variable)
    rhs: (variable)))

================================
Slash lambda head and prefix division operator
================================

==================== Tidy Core ====================
Result size of Tidy Core
  = {terms: 6, types: 4, coercions: 0, joins: 0/0}

recip :: Double -> Double
recip
  = / (x :: Double) ->
      / @Double $fFractionalDouble (D# 1.0##) x

--------------------------------

(source_file
  (banner)
  (result_size)
  (binding
    signature: (type_signature
      (variable)
      (function_type
        (constructor)
        (constructor)))
    name: (variable)
    rhs: (lambda
      (typed_binder
        (variable)
        (constructor))
      (application
        (operator)
        (type_arg
          (constructor))
        (variable)
        (parens
          (application
            (constructor)
            (literal)))
        (variable)))))

================================
Local-rules block ends its section, not the dump
================================

==================== Simplifier ====================
Result size of Simplifier = {terms: 1, types: 0, coercions: 0, joins: 0/0}

f = x

------ Local rules for imported ids --------
"SPEC/M even @Int"
    forall ($dIntegral :: Integral Int).
      even @Int $dIntegral
      = $seven

==================== Float out ====================
Result size of Float out = {terms: 1, types: 0, coercions: 0, joins: 0/0}

g = y

--------------------------------

(source_file
  (banner)
  (result_size)
  (binding
    name: (variable)
    rhs: (variable))
  (rules_block
    (dash_header))
  (banner)
  (result_size)
  (binding
    name: (variable)
    rhs: (variable)))
